mywork/force-app/main/default/objects/Deployment_Attempt__c/Deployment_Attempt__c.object-meta.xml
<CustomObject>
    <label>Deployment Attempt</label>
    <nameField>
        <displayFormat>D-{0000}</displayFormat>
        <label>Deployment Attempt Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deployment Attempts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>