mywork/force-app/main/default/objects/Deployment_Attempt__c/fields/Assemble_Request_Error__c.field-meta.xml
<CustomField>
    <fullName>Assemble_Request_Error__c</fullName>
    <label>Assemble Request Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>