mywork/force-app/main/default/objects/Deployment_Attempt__c/fields/Build__c.field-meta.xml
<CustomField>
    <fullName>Build__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Build</label>
    <referenceTo>Build__c</referenceTo>
    <relationshipName>Deployment_Attempts</relationshipName>
    <type>Lookup</type>
</CustomField>