mywork/force-app/main/default/objects/Deployment_Attempt__c/fields/Deployment__c.field-meta.xml
<CustomField>
    <fullName>Deployment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deployment</label>
    <referenceTo>Deployment__c</referenceTo>
    <relationshipLabel>Deployment Attempts</relationshipLabel>
    <relationshipName>Deployment_Attempts</relationshipName>
    <type>Lookup</type>
</CustomField>