mywork/force-app/main/default/objects/Deployment_Attempt__c/fields/Ignore_Deployment_Warnings__c.field-meta.xml
<CustomField>
    <fullName>Ignore_Deployment_Warnings__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ignore Deployment Warnings</label>
    <type>Checkbox</type>
</CustomField>