mywork/force-app/main/default/objects/Deployment_Attempt__c/fields/Is_Quick_Deploy__c.field-meta.xml
<CustomField>
    <fullName>Is_Quick_Deploy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Quick Deploy</label>
    <type>Checkbox</type>
</CustomField>