mywork/force-app/main/default/objects/Deployment_Attempt__c/fields/Is_Validation__c.field-meta.xml
<CustomField>
    <fullName>Is_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Validation</label>
    <type>Checkbox</type>
</CustomField>