mywork/force-app/main/default/objects/Deployment_Attempt__c/fields/Number_Components_Errors__c.field-meta.xml
<CustomField>
    <fullName>Number_Components_Errors__c</fullName>
    <label>Number Components Errors</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>