mywork/force-app/main/default/objects/Deployment_Attempt__c/fields/Number_Components_Total__c.field-meta.xml
<CustomField>
    <fullName>Number_Components_Total__c</fullName>
    <label>Number Components Total</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>