mywork/force-app/main/default/objects/Deployment_Attempt__c/fields/Number_Test_Errors__c.field-meta.xml
<CustomField>
    <fullName>Number_Test_Errors__c</fullName>
    <label>Number Test Errors</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>