mywork/force-app/main/default/objects/Deployment_Attempt__c/fields/Number_Tests_Completed__c.field-meta.xml
<CustomField>
    <fullName>Number_Tests_Completed__c</fullName>
    <label>Number Tests Completed</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>