mywork/force-app/main/default/objects/Deployment_Attempt__c/fields/Run_Managed_Tests__c.field-meta.xml
<CustomField>
    <fullName>Run_Managed_Tests__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Run Managed Tests</label>
    <type>Checkbox</type>
</CustomField>