mywork/force-app/main/default/objects/Deployment_Attempt__c/fields/Run_Tests__c.field-meta.xml
<CustomField>
    <fullName>Run_Tests__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Run Local Tests</label>
    <type>Checkbox</type>
</CustomField>