mywork/force-app/main/default/objects/Deployment_Attempt__c/fields/SF_Deployment_Id__c.field-meta.xml
<CustomField>
    <fullName>SF_Deployment_Id__c</fullName>
    <label>SF Deployment Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>