mywork/force-app/main/default/objects/Deployment_Attempt__c/fields/Specified_Tests__c.field-meta.xml
<CustomField>
    <fullName>Specified_Tests__c</fullName>
    <label>Specified Tests</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>