mywork/force-app/main/default/objects/Deployment_Attempt__c/fields/State_Detail__c.field-meta.xml
<CustomField>
    <fullName>State_Detail__c</fullName>
    <label>State Detail</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>