mywork/force-app/main/default/objects/Deployment_Attempt__c/fields/Target_Instance__c.field-meta.xml
<CustomField>
    <fullName>Target_Instance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Target Instance</label>
    <referenceTo>Instances__c</referenceTo>
    <relationshipLabel>Deployment Attempts</relationshipLabel>
    <relationshipName>Deployment_Attempts</relationshipName>
    <type>Lookup</type>
</CustomField>