mywork/force-app/main/default/objects/Deployment_Attempt__c/fields/Test_Level__c.field-meta.xml
<CustomField>
    <fullName>Test_Level__c</fullName>
    <label>Test Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NoTestRun</fullName>
            </value>
            <value>
                <fullName>RunSpecifiedTests</fullName>
            </value>
            <value>
                <fullName>RunLocalTests</fullName>
            </value>
            <value>
                <fullName>RunAllTestsInOrg</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>