mywork/force-app/main/default/objects/Deployment_Attempt__c/fields/Total_Code_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Total_Code_Coverage__c</fullName>
    <label>Total Code Coverage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>