mywork/force-app/main/default/objects/Deployment_Attempt__c/fields/Total_Lines_Not_Covered__c.field-meta.xml
<CustomField>
    <fullName>Total_Lines_Not_Covered__c</fullName>
    <label>Total Lines Not Covered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>